Post about cluster kubernetes - part 2

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: America/Sao_Paulo
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Luiz H. Arantes # the main title
+title: Luiz Henrique Arantes # the main title
 
 tagline: Cloud Solutions Architect | Devops  🇧🇷 🇵🇹 # it will display as the sub-title
 
