--- a/_data/share.yml
+++ b/_data/share.yml
@@ -9,6 +9,10 @@ platforms:
   - type: Facebook
     icon: "fab fa-facebook-square"
     link: "https://www.facebook.com/sharer/sharer.php?title=TITLE&u=URL"
+  
+  - type: WhatsApp
+    icon: "fab fa-whatsapp"
+    link: "https://api.whatsapp.com/send?text=TITLE&url=URL"
 
   - type: Telegram
     icon: "fab fa-telegram"
@@ -16,9 +20,9 @@ platforms:
 
   # Uncomment below if you need to.
   #
-  # - type: Linkedin
-  #   icon: "fab fa-linkedin"
-  #   link: "https://www.linkedin.com/sharing/share-offsite/?url=URL"
+  - type: Linkedin
+    icon: "fab fa-linkedin"
+    link: "https://www.linkedin.com/sharing/share-offsite/?url=URL"
   #
   # - type: Weibo
   #   icon: "fab fa-weibo"
