--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ title: Luiz Henrique Arantes # the main title
 tagline: Cloud Solutions Architect | Devops  🇧🇷 🇵🇹 # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  Personal blog about Cloud, Azure, AWS, GCP and Terraform
+  Personal blog about Cloud Computing, Azure, AWS, GCP and Terraform
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
