post azure traffic manager

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description: >- # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
-url: "arantes.net.br"
+url: "https://arantes.net.br"
 
 github:
   username: lharantes # change to your github username
