--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,10 @@ tagline: Cloud Solutions Architect | Devops  🇧🇷 🇵🇹
 description: >- # used by seo meta and the atom feed
   Personal blog about Cloud Computing, Azure, AWS, GCP and Terraform
 
+seo:
+  keywords: terraform, cloud, azure, devops, azure devops, terraform, aws
+  description: "Personal blog about Cloud Computing, Azure, AWS, GCP and Terraform"
+
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
 url: "https://arantes.net.br"
@@ -96,7 +100,7 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: https://media.licdn.com/dms/image/D4D03AQEwevNFL6rPgQ/profile-displayphoto-shrink_800_800/0/1710341537745?e=1727913600&v=beta&t=50qt41tzq4I-cqwG--DgehcKhG1YpuIY52zErxmM478
+avatar: assets/img/profile.jpeg
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
